2009-03-11  Jan Michael Alonzo  <jmalonzo@webkit.org>

Reviewed by Holger Freyther.

        [GTK] BackForward history leak?
        https://bugs.webkit.org/show_bug.cgi?id=19528

        Don't ref the history items when returning the back/forward list
        Added test_webkit_web_history_item_lifetime test case for this.

        * tests/main.c:
        (test_webkit_web_history_item_lifetime):
        (test_webkit_web_back_forward_list_order): Style fix.
        (test_webkit_web_back_forward_list_add_item): Style fix.
        (main):
        * webkit/webkitwebbackforwardlist.cpp:
        (_WebKitWebBackForwardListPrivate::webkit_web_back_forward_list_get_forward_list_with_limit):
        (_WebKitWebBackForwardListPrivate::webkit_web_back_forward_list_get_back_list_with_limit):

Canonical link: https://commits.webkit.org/33644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41582 268f45cc-cd09-0410-ab3c-d52691b4dbfc